# csv-to-netcdf

./: .gitmodules  CMakeLists.txt  README.md
src/: csv-to-netcdf.cpp  parsing.cpp  parsing.hpp  utils.hpp  writing.cpp  writing.hpp
